manually edit configure.ac
FULL-PACKAGE-NAME -> dumb-alloc
VERSION -> 1.0.0
BUG-REPORT-ADDRESS -> eric@freesa.org

AC_CONFIG_SRCDIR [tests/main.c] -> [src/dumb-alloc.c]
 (not sure why it chose the test)

AC_CONFIG_AUX_DIR([build-aux]) to reduce filesystem clutter
AC_CONFIG_MACRO_DIR([m4]) also to reduce filesystem clutter

AC_USE_SYSTEM_EXTENSIONS to surpress warning from autoreconf

AM_INIT_AUTOMAKE and allow build to reach into subdirectories

set AM_PROG_AR and LT_INIT to avoid autoreconf warnings

--- a/configure.ac
+++ b/configure.ac
@@ -2,9 +2,13 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
-AC_CONFIG_SRCDIR([tests/main.c])
+AC_INIT([dumb-alloc], [1.0.0], [eric@freesa.org])
+AC_CONFIG_SRCDIR([src/dumb-alloc.c])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_AUX_DIR([build-aux])
+AC_CONFIG_MACRO_DIR([m4])
+
+AC_USE_SYSTEM_EXTENSIONS
 
 # Checks for programs.
 AC_PROG_CC
@@ -21,6 +25,10 @@ AC_TYPE_SIZE_T
 AC_FUNC_MALLOC
 AC_FUNC_MMAP
 AC_CHECK_FUNCS([munmap strerror])
+
+AM_INIT_AUTOMAKE([subdir-objects -Werror -Wall])
+AM_PROG_AR
+LT_INIT
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
