add autotools junk to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-dumb-alloc
-dumb-alloc-test
+test-dumb-alloc
+
 *.a
 *.d
 *.o
@@ -7,3 +7,44 @@ dumb-alloc-test
 *.sym
 *~
 .gdbinit
+*.tar.*
+*.o
+*.so
+*.so.*
+*.a
+*.bin
+*.d
+*.elf
+*.hex
+*.list
+*.srec
+*.map
+*.la
+*.lo
+*.log
+*.trs
+*.bak
+*.bck
+$*
+*.000
+
+################
+# autotools junk
+################
+.libs/
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+build-aux/
+config.h
+config.h.in
+config.log
+config.status
+configure
+.deps/
+.dirstamp
+libtool
+m4/
+stamp-h1
