add "make spotless" and "make valgrind" targets
I am not sure if "make valgrind" works because I have no internet
at the moment and valgrind is not installed on my system. I will
have to test this when I return to civilizaton.

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,3 +30,11 @@ tidy:
 		-T size_t \
 		-T dumb_alloc \
 		`find . -type f -name '*.h' -o -name '*.c'`
+
+spotless:
+	rm -rf `cat .gitignore | sed -e 's/#.*//'`
+	pushd src && rm -rf `cat ../.gitignore | sed -e 's/#.*//'` && popd
+	pushd tests && rm -rf `cat ../.gitignore | sed -e 's/#.*//'` && popd
+
+valgrind: $(check_PROGRAMS)
+	libtool --mode=execute valgrind -q ./test-dumb-alloc
