--- a/Makefile.am
+++ b/Makefile.am
@@ -41,7 +41,8 @@ test_checkered_alloc_SOURCES=$(common_test_sources) \
  tests/test_checkered_alloc.c
 test_checkered_alloc_LDADD=libdumb-alloc.la
 
-AM_CFLAGS=-std=c89 -pipe -fomit-frame-pointer -O0 -ggdb -Wall -Wextra -Wpedantic -Werror -I./src
+# AM_CFLAGS=-std=c89 -pipe -fomit-frame-pointer -DDEBUG -O0 -ggdb -Wall -Wextra -Wpedantic -Werror -I./src
+AM_CFLAGS=-std=c89 -pipe -fomit-frame-pointer -O2 -ggdb -Wall -Wextra -Wpedantic -Werror -I./src
 
 # extracted from https://github.com/torvalds/linux/blob/master/scripts/Lindent
 LINDENT=indent -npro -kr -i8 -ts8 -sob -l80 -ss -ncs -cp1 -il0
