--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,16 @@
-#                                               -*- Autoconf -*-
+# dumb-alloc: basic OO memory allocator with malloc/free wrappers
+# Copyright (C) 2016, 2017 Eric Herman <eric@freesa.org>
+#
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Lesser General Public
+# License as published by the Free Software Foundation; either
+# version 2.1 of the License, or (at your option) any later version.
+#
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Lesser General Public License for more details.
+
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
