--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-test_simple
-test_two_alloc
-test_free
-test_out_of_memmory
+test_big_allocs
 test_checkered_alloc
 test_checkered_realloc
+test_free
+test_out_of_memmory
+test_simple
 test_to_string
+test_two_alloc
 
 *.a
 *.d
