--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,7 @@ check_PROGRAMS=\
  test_checkered_realloc \
  test_to_string \
  test_big_allocs \
+ test_os \
  test_out_of_memory
 
 common_test_sources=$(include_HEADERS) \
@@ -37,6 +38,9 @@ common_test_sources=$(include_HEADERS) \
 
 test_simple_SOURCES=$(common_test_sources) tests/test_simple.c
 test_simple_LDADD=libdumb-alloc.la
+
+test_os_SOURCES=$(common_test_sources) tests/test_os.c
+test_os_LDADD=libdumb-alloc.la
 
 test_two_alloc_SOURCES=$(common_test_sources) tests/test_two_alloc.c
 test_two_alloc_LDADD=libdumb-alloc.la
@@ -123,4 +127,5 @@ valgrind: $(check_PROGRAMS)
 	./libtool --mode=execute valgrind -q ./test_checkered_alloc
 	./libtool --mode=execute valgrind -q ./test_checkered_realloc
 	./libtool --mode=execute valgrind -q ./test_to_string
+	./libtool --mode=execute valgrind -q ./test_os
 	./libtool --mode=execute valgrind -q ./test_big_allocs
